--- a/phim/App.config
+++ b/phim/App.config
@@ -4,6 +4,10 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="phim.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+    
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="phim.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -27,4 +31,14 @@
             </setting>
         </phim.Properties.Settings>
     </userSettings>
+<applicationSettings>
+        <phim.Properties.Settings>
+                <setting name="authServerUrl" serializeAs="String">
+                        <value>localhost</value>
+                </setting>
+                <setting name="authServerToken" serializeAs="String">
+                        <value>874bcoo8b4vpaq874ba8b</value>
+                </setting>
+        </phim.Properties.Settings>
+    </applicationSettings>
 </configuration>
