--- a/phim/Properties/Settings.settings
+++ b/phim/Properties/Settings.settings
@@ -17,5 +17,11 @@
     <Setting Name="position" Type="System.Drawing.Point" Scope="User">
       <Value Profile="(Default)">20, 20</Value>
     </Setting>
+    <Setting Name="authServerUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">localhost</Value>
+    </Setting>
+    <Setting Name="authServerToken" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">874bcoo8b4vpaq874ba8b</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
