--- a/phim/App.config
+++ b/phim/App.config
@@ -34,10 +34,13 @@
 <applicationSettings>
         <phim.Properties.Settings>
                 <setting name="authServerUrl" serializeAs="String">
-                        <value>localhost</value>
+                        <value />
                 </setting>
                 <setting name="authServerToken" serializeAs="String">
-                        <value>874bcoo8b4vpaq874ba8b</value>
+                        <value />
+                </setting>
+                <setting name="authServerCloud" serializeAs="String">
+                        <value />
                 </setting>
         </phim.Properties.Settings>
     </applicationSettings>
